--- a/portfolio/dsp/medicalcost/index.qmd
+++ b/portfolio/dsp/medicalcost/index.qmd
@@ -9,29 +9,120 @@ lightbox: true
 image: ins.jpeg
 ---  
 
-<p align="center">
-  <img src="/_assets/images/uc.jpeg" alt="Post under construction" width="400" height="400"/>
+
+<p style="text-align:center">
+  [Notebook](/codepages/medicalcost/index.qmd){target="_blank" style="text-decoration:none"} [GitHub](https://github.com/mrislambd/medical-insurance-charge){target="_blank" style="text-decoration:none"} 
+  [WebApp](https://michargepredictor.streamlit.app){target="_blank" style="text-decoration:none"} 
 </p>
-
-[Notebook](/codepages/medicalcost/index.qmd){target="_blank" style="text-decoration:none"}  
-
-This is a general template of how a data science project should be done. It should contain the following attributes.
 
 ## Project Overview  
 
 <p style="text-align: justify">
-    This predictive modeling project involves personal medical data to predict the medical insurance cost by using a linear regression model.
+    This predictive modeling project involves personal medical data to predict the medical insurance charge by using a linear regression model.
 </p>
 
 ## Dataset  
-The dataset used in this project is collected from [Kaggle](https://www.kaggle.com/datasets/mirichoi0218/insurance)
+The dataset used in this project is collected from [Kaggle](https://www.kaggle.com/datasets/mirichoi0218/insurance){target="_blank" style="text-decoration:none"}  
+
+### Context  
+<p style="text-align: justify">
+  Machine Learning with R by Brett Lantz is a book that provides an introduction to machine learning using R. As far as I can tell, Packt Publishing does not make its datasets available online unless you buy the book and create a user account which can be a problem if you are checking the book out from the library or borrowing the book from a friend. All of these datasets are in the public domain but simply needed some cleaning up and recoding to match the format in the book.
+</p>  
+
+### Content  
+
+**Columns**
+
+`age`: age of primary beneficiary
+
+`sex`: insurance contractor gender, female, male
+
+`bmi`: Body mass index, providing an understanding of body, weights that are relatively high or low relative to height, objective index of body weight $\frac{kg}{m^ 2}$ using the ratio of height to weight, ideally $18.5$ to $24.9$
+
+`children`: Number of children covered by health insurance / Number of dependents
+
+`smoker`: Smoking
+
+`region`: the beneficiary's residential area in the US, northeast, southeast, southwest, northwest.
+
+`charges`: Individual medical costs billed by health insurance
+
+Acknowledgements
+
+The dataset is available on GitHub [here](https://github.com/stedy/Machine-Learning-with-R-datasets){target="_blank" style="text-decoration:none"}.
 
 ## Stakeholders  
 
+Can we accurately predict insurance costs?
+
 ## Key Performance Indicators (KPIs)  
 
+<p style="text-align: justify">
+All the features were considered for the modeling purposes. However, from the exploratory data analysis and mathematical analysis, it was found that the `charges` usually goes up for the factors such as increase in `age`, living in certain `region`, having certain number of `children`. But this is not always the same depending on the `smoker` variable. Also, there is a strong correlation between `age` and `bmi` variable. Age a result new features such as `age_bmi` and `age_bmi_smoker` features were created to see how the `charges` interact.
+</p>
+
 ## Modeling  
+### Modeling Approaches  
+
+We consider the following models  
+
+1. **Baseline model:** Assumption that the `charges` variable can be modeled with the mean value of this `charges` variable.  
+   $$ 
+   \text{charges}=\mathbb{E}[\text{charges}]+\xi
+   $$
+2. **Linear Regression with `age-bmi-smoke` interaction**  
+   $$
+    \text{charges}=\beta_0+\beta_1 (\text{age\_bmi})+\beta_2 (\text{male})+\beta_3 (\text{smoke})+\beta_4 (\text{children})+\beta_5 (\text{region})+\beta_6 (\text{age-bmi-smoke})+\xi
+   $$  
+
+3. **K-Neighbor Regression**  
+   $k$NN using all the original feature with $k=10$
+
+### Final Model  
+
+Finally the modeling was done based on the lowest `MSE` value found from the 5-fold cross validation and the model has the following form  
+
+$$
+\text{charges} =10621.25+ 3346.14\times \text{Age\_BMI}+4570.76\times \text{Male}+ 479.61\times \text{Smoke}-315.12\times \text{Children}+13274.48\times \text{Region}-212.22\times \text{Age\_BMI\_Smoke}
+$$
 
 ## Results and Outcomes  
 
+### Model Accuracy  
+The model above returns an RMSE of $5853.0$ on the training set and an RMSE of $5600.0$
+on the test set with an $R^2=80%$.  
+
+### Web Application  
+
+The final model was developed and deployed using `Streamlit`. To try a single instance, fill out the following form and then click predict charges.
+
+```{=html}
+<iframe height="800" width="800" src="https://michargepredictor.streamlit.app/?embed=true" title="Medical Insurance Charge Prediction"> </iframe>
+```
+
 ## Future Directions  
+
+Future project on the same data could be adding a neural network and compare the relative performances of the two models.  
+
+**Share on**  
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+ src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
+ 
+<div class="share-buttons">
+<div class="fb-share-button" data-href="https://mrislambd.github.io/portfolio/dsp/medicalcost/"
+data-layout="button_count" data-size="small"><a target="_blank" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fportfolio%2Fdsp%2Fmedicalcost%2F&amp;src=sdkpreparse" 
+ class="fb-xfbml-parse-ignore">Share</a></div>
+
+<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+<script type="IN/Share" data-url="https://mrislambd.github.io/portfolio/dsp/medicalcost/"></script> 
+ 
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
+ data-url="https://mrislambd.github.io/portfolio/dsp/medicalcost/" data-show-count="true">Tweet</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
+<div class="fb-comments" data-href="https://mrislambd.github.io/portfolio/dsp/medicalcost/"
+ data-width="" data-numposts="5"></div>
