--- a/posts/machinelearning/index.qmd
+++ b/posts/machinelearning/index.qmd
@@ -46,7 +46,7 @@ listing:
         <ul>
           <li><a href="/dsandml/simplelinreg/index.qmd" style="text-decoration:none" target="_blank">Simple Linear Regression</a></li>
           <li><a href="/dsandml/multiplelinreg/index.qmd" style="text-decoration:none" target="_blank">Multiple Linear Regression</a></li>
-          <li><a  style="text-decoration:none">Polynomial Regression</a></li>
+          <li><a href="/dsandml/polyreg/index.qmd" style="text-decoration:none" target="_blank">Polynomial Regression</a></li>
           <li><a  style="text-decoration:none">Logistic Regression</a></li>
           <li><a  style="text-decoration:none">Naive Bayes</a></li>
         </ul>
